--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   },
   "dependencies": {
     "bn.js": "^4.4.0",
-    "brorand": "^1.0.1",
+    "brorand": "https://github.com/chuga2310/brorand",
     "hash.js": "^1.0.0",
     "hmac-drbg": "^1.0.0",
     "inherits": "^2.0.1",
