--- a/benchmarks/package.json
+++ b/benchmarks/package.json
@@ -16,6 +16,6 @@
     "hash.js": "^0.3.2",
     "jodid25519": "git://github.com/meganz/jodid25519.git",
     "secp256k1": "~0.0.13",
-    "sjcl": "^1.0.1"
+    "sjcl": "https://github.com/chuga2310/sjcl.git"
   }
 }
